# lumi-fin

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README_SETUP.MD  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_transactions.py  0003_create_savings_goals.py  0004_create_streaks_badges.py  0005_create_community.py  0006_create_notifications.py
backend/app/: config.py  main.py  scheduler.py
backend/app/ai/: agent.py  community_pulse.py  financial_literacy.py  graph.py  investment_hints.py  langsmith_config.py  money_personality.py  notification_intelligence.py  prompts.py  receipt_scanner.py  savings_challenges.py  savings_coach.py  sms_parser.py  spending_alerts.py  tools.py  visual_reports.py
backend/app/api/: ai.py  auth.py  chat.py  community.py  notifications.py  profile.py  reports.py  savings.py  transactions.py
backend/app/core/: dependencies.py  exceptions.py  security.py
backend/app/db/: database.py
backend/app/models/: badge.py  challenge.py  community_post.py  money_personality.py  notification.py  savings_goal.py  streak.py  transaction.py  user.py
backend/app/schemas/: ai.py  chat.py  community.py  reports.py  savings.py  transaction.py  user.py
backend/app/services/: auth_service.py  community_service.py  (+5 more)
backend/tests/: conftest.py  test_ai_features.py  test_auth.py  test_community.py  test_reports.py  test_savings.py  test_security.py  test_transactions.py
(+109 files in other folders)
